# Metal-Test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Buffer.h  Command.h  Context.h  Game.h  Material.h  Model.h  Pipeline.h  RenderPass.h  Renderer.h  Shader.h  Texture.h  Util.h  Window.h  imgui_support.h
shaders/: triangle.metal
src/: Buffer.cpp  Command.cpp  Context.cpp  Game.cpp  Material.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Util.cpp  Window.mm  main.cpp
src/vendor_impls/: imgui_support.cpp  metal_impl.cpp  tinygltf_impl.cpp
test/: ArrayVec.cpp
